--- a/styles/crew.module.css
+++ b/styles/crew.module.css
@@ -4,8 +4,7 @@
   display: flex;
   align-items: center;
   gap: 2rem;
-  border: 1px solid red;
-  justify-content: center;
+  /* justify-content: flex-end; */
   flex-direction: column;
   color: white;
   background-repeat: no-repeat;
