--- a/styles/crew.module.css
+++ b/styles/crew.module.css
@@ -4,17 +4,18 @@
   display: flex;
   align-items: center;
   gap: 2rem;
-  /* justify-content: flex-end; */
+  justify-content: flex-end;
   flex-direction: column;
   color: white;
+  padding-top: 5.8rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("../public/images/crew/background-crew-desktop.jpg");
 }
 .circle {
   display: flex;
-  width: 0.8rem;
-  height: 0.8rem;
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 50%;
   background: rgba(255, 255, 255, 1);
   opacity: 17%;
@@ -25,8 +26,12 @@
 }
 .selected {
   display: flex;
-  width: 0.8rem;
-  height: 0.8rem;
+  width: 0.6rem;
+  height: 0.6rem;
   border-radius: 50%;
   background: rgba(255, 255, 255, 1);
+}
+
+.image{
+  border: 1px solid red;
 }
