--- a/styles/crew.module.css
+++ b/styles/crew.module.css
@@ -4,10 +4,10 @@
   display: flex;
   align-items: center;
   gap: 2rem;
-  justify-content: flex-end;
+  justify-content:space-around;
   flex-direction: column;
   color: white;
-  padding-top: 5.8rem;
+  padding-top: 7rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("../public/images/crew/background-crew-desktop.jpg");
