--- a/styles/technology.module.css
+++ b/styles/technology.module.css
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  border: 1px solid red;
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -10,5 +9,45 @@
   background-image: url("../public/images/technology/background-technology-desktop.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  background-clip: content-box;
   color: white;
+}
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  font-size: 16px;
+}
+.selected {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+}
+@media (min-width: 768px) {
+  .circle ,.selected {
+    font-size: 24px;
+    width: 60px;
+    height: 60px;
+  }
+}
+@media (min-width: 1024px) {
+.circle, .selected {
+    font-size: 32px;
+    width: 80px;
+    height: 80px;
+  }
 }
